--- a/app/sass/_header.sass
+++ b/app/sass/_header.sass
@@ -1,1 +1,257 @@
 .header
+  position: fixed
+  top: 0
+  left: 0
+  width: 100%
+  &__row
+    padding: ($step_3/2) 0
+    &_1
+      border-bottom: .5px solid rgba($origin, .3)
+    & .container 
+      display: flex
+      align-items: center
+      justify-content: space-between
+  &__contacts
+    display: flex
+    align-items: center
+    margin-left: auto
+  &__contact 
+    margin-right: $step_2
+    & a
+      display: flex
+      align-items: center
+      & svg 
+        margin-right: ($step_3/2)
+      &:hover
+        transition: .2s
+        color: $second
+        & svg 
+          & path 
+            fill: $second
+            transition: .2s
+  &__book
+      & .btn
+        & svg 
+          display: none
+  &__logo
+    & a
+      display: flex
+      flex-direction: column
+      align-items: center
+    & span 
+      font-size: 18px
+      font-weight: 700
+      color: $origin
+  &__menu
+    & .menu
+      display: flex
+      align-items: center
+      &__arrow
+        display: block
+        width: 8px
+        height: 8px
+        border: none
+        border-right: 1px solid $dark
+        border-bottom: 1px solid $dark
+        cursor: pointer
+        position: absolute
+        top: 50%
+        right: 0
+        transform: translateY(-50%) rotate(45deg)
+        background: transparent
+      &__comeback
+        display: none
+      & li 
+        list-style: none
+        &:not(:last-child)
+          margin-right: $step_3
+        &.menu-item-has-children
+          position: relative
+          padding-right: 15px
+          & .sub-menu
+            position: absolute
+            top: 100%
+            left: 0
+            width: max-content
+            opacity: 0
+            visibility: hidden
+            transition: .2s
+            
+          &:hover, &.open
+            & .sub-menu
+              opacity: 1
+              visibility: visible
+              transition: .2s
+  &__burger
+    display: none
+    border: none
+    border-radius: 0
+    width: 30px
+    height: 20px
+    margin: 0
+    padding: 0
+    flex-direction: column
+    justify-content: space-between
+    background: transparent
+    cursor: pointer
+    position: relative
+    & span
+        width: 100%
+        height: 3px
+        background: $main
+        transition: .2s
+    &.open
+        position: relative
+        & span
+            &:nth-child(1),
+            &:nth-child(3)
+                position: absolute
+                top: 50%
+                left: 50%
+                transition: .2s
+            &:nth-child(1)
+                transform: translate(-50%, -50%) rotate(45deg)
+            &:nth-child(2)
+                opacity: 0
+                visibility: hidden
+            &:nth-child(3)
+                transform: translate(-50%, -50%) rotate(-45deg)
+@media screen and ( max-width: 1200px )
+  .header
+    &__contact 
+      margin-right: $step_3
+@media screen and ( max-width: 1000px )
+  .header
+    &__logo
+      max-width: 130px
+      & img 
+        width: 100%
+      & span 
+        text-align: center
+    &__contacts
+      flex-direction: column
+      align-items: flex-end
+    &__search
+      display: none
+    &__menu
+      width: 100%
+      & .menu
+        justify-content: space-around
+@media screen and ( max-width: 768px )
+  .header
+    &__row
+      &_2
+        padding: 0
+    &__contact
+      margin-right: 0
+    &__burger
+      display: flex
+      margin-left: $step_3
+      position: relative
+      z-index: 1000
+    &__book
+      position: fixed
+      right: 15px
+      bottom: 15px
+      & .btn
+        width: 50px
+        height: 50px
+        border-radius: 50%
+        & span, &::before
+          display: none
+        & svg 
+          display: block
+          & path 
+            fill: $light
+            transition: .2
+        &:hover
+          & svg
+            & path 
+              fill: $main
+              transition: .2
+    &__menu
+      position: fixed
+      top: 0
+      left: 0
+      width: 100%
+      height: 100vh
+      padding-top: 25%
+      z-index: 999
+      background: $light
+      opacity: 0
+      visibility: hidden
+      &.open
+        opacity: 1
+        visibility: visible
+      & .menu
+        flex-direction: column
+        transition: .2s
+        &__comeback
+          display: block
+          background: transparent 
+          border: none 
+          width: 100%
+          cursor: pointer
+          font-size: 18px
+          position: relative
+          padding: 15px
+          &::after
+            content: ''
+            width: 30%
+            height: 1px
+            background: radial-gradient(circle, rgba(0,0,0,1) 0%, rgba(255,255,255,0) 75%)
+            position: absolute
+            left: 50%
+            bottom: 0
+            transform: translateX(-50%)
+        &.show-sub-menu
+          & > li
+            transform: translateX(-100%)
+            transition: transform 1s calc(var(--i) * .075s)
+        & > li
+          transform: translateX(0)
+          transition: transform 1s calc(var(--i) * .1s)
+        & li
+          width: 100%
+          padding: 15px
+          text-align: center
+          font-size: 24px
+          position: relative
+          &::after
+            content: ''
+            width: 100%
+            height: 1px
+            background: radial-gradient(circle, rgba(0,0,0,1) 0%, rgba(255,255,255,0) 75%)
+            position: absolute
+            left: 0
+            bottom: 0
+          &:not(:last-child)    
+            margin-right: 0
+          &.menu-item-has-children
+            & .sub-menu
+              top: 0
+              left: 100%
+              width: 100vw
+        &__arrow
+          right: 15px
+          transform: translateY(-50%) rotate(-45deg)
+@media screen and ( max-width: 580px )
+  .header
+    &__logo
+      max-width: 100px
+      & span 
+        font-size: 16px
+@media screen and ( max-width: 480px )
+  .header
+    &__contacts
+      flex-direction: row
+    &__contact
+      & a
+        & svg
+          margin-right: 0
+          width: 30px
+          height: 30px
+      &:not(:last-child)
+        margin-right: $step_3
+      & span
+        display: none
