--- a/app/sass/_var.sass
+++ b/app/sass/_var.sass
@@ -1,17 +1,26 @@
-// @font-face
+$origin: #46ACE1
+$main: #1A5BE5
+$second: #FEB526
+$light: #fff
+$dark: #000
+
+$radius: 8px
+$step_1: 80px
+$step_2: 40px
+$step_3: 20px
+
 
 .title-1, h1
-  // font-weight: 
-  // font-size: 
+  font-weight: 400
+  font-size: 48px
 .title-2, h2
-  // font-weight: 
-  // font-size:
+  font-weight: 400
+  font-size: 36px
 .title-3, h3
-  // font-weight: 
-  // font-size:
-.text
-  // font-weight: 
-  // font-size:
+  font-weight: 400
+  font-size: 24px
+.small
+  font-size: 14px
 
 .btn
   cursor: pointer
@@ -19,18 +28,51 @@
   align-items: center
   justify-content: center
   transition: .2s
-  background: transparent
-  width: 200px
-  height: 50px
-  border: 1px solid #000
-  border-radius: 8px
-  font-weight: 400
-  font-size: 18px
-  color: #000
+  background: $main
+  width: 175px
+  height: 48px
+  border: 1px solid $main
+  border-radius: $radius
+  font-weight: 700
+  font-size: 16px
+  color: $light
+  position: relative
+  text-transform: uppercase
+  &::before
+    content: '+'
+    width: 20px
+    height: 20px
+    border-radius: 50%
+    border: 2px solid $light 
+    color: $light
+    margin-right: 8px
+    transition: .2s
+    display: flex
+    align-items: center
+    justify-content: center
+    font-size: 20px
+    font-weight: 400
+    line-height: 1
   &:hover,
   &:active
-    // background: 
+    background: $light
+    color: $main
     transition: .2s
+    &::before
+      border-color: $main
+      color: $main
+      transition: .2s
+  &_big 
+    width: 236px
+    height: 56px
+  &_2
+    &:hover,
+    &:active
+      background: $second
+      color: $dark
+      &::before
+        border-color: $dark
+        color: $dark
 .container
   max-width: 1230px + (2 * 15px)
   padding: 0 15px
