--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -9,20 +9,20 @@
 html
   overflow-x: hidden
 body
-  font-family: 'font', sans-serif
+  font-family: 'Montserrat', sans-serif
   font-weight: 400
-  font-size: 18px
-  background-color: #fff
-  color: #000
+  font-size: 16px
+  background-color: $light
+  color: $dark
   overflow-x: hidden
   &::-webkit-scrollbar
     width: 7px
-    background: #fff
+    background: $light
   &::-webkit-scrollbar-track
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3)
+    box-shadow: inset 0 0 6px rgba($dark, 0.3)
 
   &::-webkit-scrollbar-thumb
-    background: #000
+    background: $dark
 a
   text-decoration: none
   color: inherit
@@ -32,8 +32,6 @@ input, textarea
   font-family: inherit, sans-serif
 
 @import 'header'
+@import 'banner'
 @import 'seo'
-
-@media screen and ( max-width: 580px )
-  body
-    font-size: 16px
+    
