--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -29,9 +29,13 @@ a
 
 input, textarea
   outline: none
-  font-family: inherit, sans-serif
+  font-family: inherit
+  &::placeholder
+    color: #5E5E5E
+    font-size: 14px
+    font-weight: 400
 
 @import 'header'
 @import 'banner'
+@import 'cost-form'
 @import 'seo'
-    
