--- a/app/sass/_banner.sass
+++ b/app/sass/_banner.sass
@@ -1,8 +1,19 @@
 .banner
+  height: 50vh
+  min-height: 500px
+  position: relative
   & > picture
     width: 100%
+    height: 100%
+    position: absolute
+    top: 0
+    left: 0
     & img,
     & source
       width: 100%
+      height: 100%
       object-fit: cover
       object-position: center
+  & .container
+    position: relative
+    min-height: 100%
