--- a/app/sass/_header.sass
+++ b/app/sass/_header.sass
@@ -3,11 +3,13 @@
   top: 0
   left: 0
   width: 100%
+  z-index: 990
+  background: $light
   &__row
-    padding: ($step_3/2) 0
     &_1
       border-bottom: .5px solid rgba($origin, .3)
-    & .container 
+      padding: ($step_3/2) 0
+    & .container
       display: flex
       align-items: center
       justify-content: space-between
@@ -15,30 +17,30 @@
     display: flex
     align-items: center
     margin-left: auto
-  &__contact 
+  &__contact
     margin-right: $step_2
     & a
       display: flex
       align-items: center
-      & svg 
+      & svg
         margin-right: ($step_3/2)
       &:hover
         transition: .2s
         color: $second
-        & svg 
-          & path 
+        & svg
+          & path
             fill: $second
             transition: .2s
   &__book
-      & .btn
-        & svg 
-          display: none
+    & .btn
+      & svg
+        display: none
   &__logo
     & a
       display: flex
       flex-direction: column
       align-items: center
-    & span 
+    & span
       font-size: 18px
       font-weight: 700
       color: $origin
@@ -61,7 +63,7 @@
         background: transparent
       &__comeback
         display: none
-      & li 
+      & li
         list-style: none
         &:not(:last-child)
           margin-right: $step_3
@@ -76,11 +78,15 @@
             opacity: 0
             visibility: hidden
             transition: .2s
-            
+            & li
+              padding: 5px 0
+              &:nth-child(n)
+                margin-right: 0
           &:hover, &.open
             & .sub-menu
               opacity: 1
               visibility: visible
+              transform: translateY(0)
               transition: .2s
   &__burger
     display: none
@@ -96,37 +102,37 @@
     cursor: pointer
     position: relative
     & span
-        width: 100%
-        height: 3px
-        background: $main
-        transition: .2s
+      width: 100%
+      height: 3px
+      background: $main
+      transition: .2s
     &.open
-        position: relative
-        & span
-            &:nth-child(1),
-            &:nth-child(3)
-                position: absolute
-                top: 50%
-                left: 50%
-                transition: .2s
-            &:nth-child(1)
-                transform: translate(-50%, -50%) rotate(45deg)
-            &:nth-child(2)
-                opacity: 0
-                visibility: hidden
-            &:nth-child(3)
-                transform: translate(-50%, -50%) rotate(-45deg)
+      position: relative
+      & span
+        &:nth-child(1),
+        &:nth-child(3)
+          position: absolute
+          top: 50%
+          left: 50%
+          transition: .2s
+        &:nth-child(1)
+          transform: translate(-50%, -50%) rotate(45deg)
+        &:nth-child(2)
+          opacity: 0
+          visibility: hidden
+        &:nth-child(3)
+          transform: translate(-50%, -50%) rotate(-45deg)
 @media screen and ( max-width: 1200px )
   .header
-    &__contact 
+    &__contact
       margin-right: $step_3
 @media screen and ( max-width: 1000px )
   .header
     &__logo
       max-width: 130px
-      & img 
+      & img
         width: 100%
-      & span 
+      & span
         text-align: center
     &__contacts
       flex-direction: column
@@ -137,6 +143,24 @@
       width: 100%
       & .menu
         justify-content: space-around
+@media screen and ( min-width: 769px )
+  .header
+    &__menu
+      & .menu
+        & > li
+          padding: ($step_3/2) 0
+        & .sub-menu
+          background: $light
+          padding: 10px 10px
+          margin-left: -5px
+          transform: translateY(10px)
+          -webkit-box-shadow: 4px 4px 8px 0px rgba($dark, 0.2)
+          -moz-box-shadow: 4px 4px 8px 0px rgba($dark, 0.2)
+          box-shadow: 4px 4px 8px 0px rgba($dark, 0.2)
+          border-top: .5px solid rgba($origin, .3)
+          & li
+            padding: 5px 0
+
 @media screen and ( max-width: 768px )
   .header
     &__row
@@ -159,14 +183,14 @@
         border-radius: 50%
         & span, &::before
           display: none
-        & svg 
+        & svg
           display: block
-          & path 
+          & path
             fill: $light
             transition: .2
         &:hover
           & svg
-            & path 
+            & path
               fill: $main
               transition: .2
     &__menu
@@ -188,8 +212,8 @@
         transition: .2s
         &__comeback
           display: block
-          background: transparent 
-          border: none 
+          background: transparent
+          border: none
           width: 100%
           cursor: pointer
           font-size: 18px
@@ -207,10 +231,10 @@
         &.show-sub-menu
           & > li
             transform: translateX(-100%)
-            transition: transform 1s calc(var(--i) * .075s)
+            transition: transform 1s calc(var(--in) * .075s)
         & > li
           transform: translateX(0)
-          transition: transform 1s calc(var(--i) * .1s)
+          transition: transform 1s calc(var(--out) * .075s)
         & li
           width: 100%
           padding: 15px
@@ -225,21 +249,43 @@
             position: absolute
             left: 0
             bottom: 0
-          &:not(:last-child)    
+          &:not(:last-child)
             margin-right: 0
           &.menu-item-has-children
             & .sub-menu
               top: 0
               left: 100%
               width: 100vw
+              & li
+                padding: 15px
+              & > li
+                animation: calc(1s + (var(--out) * .075s)) ease-in-out calc(var(--sub_out) * .1s) submenu-li-out
+            &.open
+              & .sub-menu > li
+                animation: calc(1s + (var(--in) * .075s)) ease-in-out calc(var(--sub_in) * .1s) submenu-li-in
         &__arrow
           right: 15px
           transform: translateY(-50%) rotate(-45deg)
+@keyframes submenu-li-in
+  0%
+    transform: translateX(0%)
+  50%
+    transform: translateX(-25%)
+  100%
+    transform: translateX(0%)
+@keyframes submenu-li-out
+  0%
+    transform: translateX(0%)
+  50%
+    transform: translateX(25%)
+  100%
+    transform: translateX(0%)
+
 @media screen and ( max-width: 580px )
   .header
     &__logo
       max-width: 100px
-      & span 
+      & span
         font-size: 16px
 @media screen and ( max-width: 480px )
   .header
