--- a/app/sass/_var.sass
+++ b/app/sass/_var.sass
@@ -9,7 +9,6 @@ $step_1: 80px
 $step_2: 40px
 $step_3: 20px
 
-
 .title-1, h1
   font-weight: 400
   font-size: 48px
@@ -28,51 +27,31 @@ $step_3: 20px
   align-items: center
   justify-content: center
   transition: .2s
-  background: $main
-  width: 175px
-  height: 48px
-  border: 1px solid $main
+  background: $second
+  width: 200px
+  height: 45px
+  border: 1px solid $second
   border-radius: $radius
-  font-weight: 700
+  font-weight: 600
   font-size: 16px
   color: $light
-  position: relative
   text-transform: uppercase
-  &::before
-    content: '+'
-    width: 20px
-    height: 20px
-    border-radius: 50%
-    border: 2px solid $light 
-    color: $light
-    margin-right: 8px
-    transition: .2s
-    display: flex
-    align-items: center
-    justify-content: center
-    font-size: 20px
-    font-weight: 400
-    line-height: 1
   &:hover,
   &:active
     background: $light
-    color: $main
+    color: $second
     transition: .2s
-    &::before
-      border-color: $main
-      color: $main
-      transition: .2s
-  &_big 
-    width: 236px
+  &_big
+    width: 280px
     height: 56px
   &_2
+    border-color: $main
+    background: $light
+    color: $main
     &:hover,
     &:active
-      background: $second
-      color: $dark
-      &::before
-        border-color: $dark
-        color: $dark
+      background: $main
+      color: $light
 .container
   max-width: 1230px + (2 * 15px)
   padding: 0 15px
