--- a/app/sass/_gallery.sass
+++ b/app/sass/_gallery.sass
@@ -45,6 +45,9 @@
   &__pagination
     display: none!important
   &--grid
+    & .gallery__title
+      text-align: left
+      margin-bottom: 40px
     & .gallery__inner
       display: grid
       grid-template-columns: repeat(3, 1fr)
