--- a/app/sass/_header.sass
+++ b/app/sass/_header.sass
@@ -181,6 +181,8 @@
       & .menu
         width: 100%
         justify-content: space-between
+        & li
+          text-transform: uppercase
         & > li
           padding: ($step_3/2) 0
           &.menu-item-has-children
@@ -211,7 +213,7 @@
               & a
                 font-size: 14px
                 font-weight: 500
-                text-transform: lowercase
+                text-transform: uppercase
           &.menu-item
             &-v1
               & .sub-menu
